[package]
name = "stardust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bt_bencode = "0.8.1"
percent-encoding = "2.3.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
sha1 = { version = "0.10.6", features = ["asm"] }
tokio = { version = "1", features = ["full"] }
