[package]
name = "stardust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bt_bencode = "0.8.2"
bytes = "1.10.1"
futures = "0.3.31"
percent-encoding = "2.3.1"
rand = { version = "0.9.0", features = ["thread_rng"] }
reqwest = "0.12.11"
serde = { version = "1.0.217", features = ["derive"] }
sha1 = { version = "0.10.6", features = ["asm"] }
thiserror = "2.0.9"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(mloom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[lints.rust]
# TODO: What does this really do? Should it warn or not?
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
